# wq

./: .gitignore  .gitmodules  AUTHORS  CONTRIBUTING  Cargo.toml  README  bdg.py  build.rs  builtin-rcg.py  contributing.txt  exa-t.py  fib1.wq  readme.txt  test1.wq
.github/workflows/: build.yml
.zed/: settings.json
d/: changelog  fixme  refcard  todo  usage  wqdbman
doc/: changelog.txt  fixme.txt  hints.md  hints.txt  refcard.txt  roadmap.txt  usage.txt
doc/builtins/: abs.txt  alloc.txt  and.txt  asciiplot.txt  avg.txt  band.txt  bin.txt  bnot.txt  bor.txt  builtins.txt  bxor.txt  cat.txt  ceiling.txt  chr.txt  cos.txt  cosh.txt  count.txt  distinct.txt  drop.txt  echo.txt  eval.txt  exec.txt  exp.txt  fclose.txt  find.txt  first.txt  flatten.txt  floor.txt  fopen.txt  format.txt  fread.txt  fsize.txt  fwrite.txt  idx.txt  in.txt  input.txt  keys.txt  last.txt  ln.txt  max.txt  (+27 more)
e/: asciibox.wq  bf.wq  cowsay.wq  fft.wq  fib2.wq  foldln.wq  rpn.wq  uuidv4.wq
exa/: asciibox.wq  bc.wq  bf.wq  closure.wq  cowsay.wq  dict.wq  e.wq  fft.wq  fib.wq  fib1.wq  fold80.wq  foldln.wq  gete.wq  gete2000.wq  input.wq  lcg.wq  lg.wq  linreg.wq  list-test.wq  list.wq  load1.wq  load2.wq  load3.wq  math.wq  newline.wq  pipe.wq  plot.wq  pri1.wq  pri2.wq  pri3.wq  primes-max.wq  primes.wq  primes1.wq  primes2.wq  rpn.wq  tables.wq  test1.wq  uuidv4.wq
exa/exp/: cowsay.exp  e.exp  fft.exp  fib1.exp  lcg.exp  lg.exp  load1.exp  load2.exp  pri1.exp  pri2.exp  pri3.exp
exa/spe/: load2.wq
lib/: math.wq  str.wq
src/: astnode.rs  builtins.rs  builtins_help.rs  desserts.rs  evaluator.rs  folder.rs  lexer.rs  lib.rs  main.rs  parser.rs  platform.rs  post_parser.rs  repl.rs  resolver.rs  utils.rs  value.rs  vm.rs  wasm.rs  wqdb.rs  wqerror.rs
src/apps/: formatter.rs
src/builtins/: core.rs  dict.rs  eval.rs  io.rs  list.rs  logical.rs  math.rs  plot.rs  str.rs  string.rs  system.rs  type_builtins.rs  typeb.rs  viz.rs  wq_type.rs
src/desserts/: daydream.rs  hotchoco.rs  icedtea.rs  tshelper.rs
src/helpers/: string_helpers.rs
src/platform/: native.rs  wasm32.rs
std/: prelude.wq  str.wq
tests/: wqsnap.rs
(+120 files in other folders)
