[package]
name = "wq"
version = "0.6.0-b3"
edition = "2024"
build = "build.rs"

[profile.lyrical]
inherits = "release"
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
colored = "3.0.0"
rand = "0.9.2"
once_cell = "1.21.3"
rustyline = "16.0.0"
textplots = "0.8.7"
rgb = "0.8.52"
indexmap = "2.10.0"
encoding_rs = "0.8.35"
