[package]
name = "wq"
version = "0.7.0-a2"
edition = "2024"
build = "build.rs"

[profile.lyrical]
inherits = "release"
lto = "fat"
codegen-units = 1
panic = "abort"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.9.2"
once_cell = "1.21.3"
textplots = "0.8.7"
rgb = "0.8.52"
indexmap = "2.10.0"
encoding_rs = "0.8.35"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
colored = "3.0.0"
rustyline = "16.0.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "console"] }
