[package]
name = "wq"
version = "0.7.0-a4"
edition = "2024"
build = "build.rs"
description = "The wq programming language"
repository = "https://github.com/illusory-dept/wq"
license = "MIT"

[profile.lyrical]
inherits = "release"
lto = "fat"
codegen-units = 1
panic = "abort"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.9.2"
once_cell = "1.21.3"
textplots = "0.8.7"
rgb = "0.8.52"
indexmap = "2.10.0"
encoding_rs = "0.8.35"

[dev-dependencies]
insta = { version = "1", features = ["glob", "filters"] }
assert_cmd = "2"
anyhow = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
colored = "3.0.0"
rustyline = "17"
tree-sitter = "0.25"
tree-sitter-highlight = "0.25"
tree-sitter-wq = { path = "vendor/tree-sitter-wq" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "console"] }
